[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/demo_character_controller.gd" type="Script" id=1]
[ext_resource path="res://assets/spectrum_shifting/spectrum_lamp_mask.webp" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 540.0

[node name="DemoCharacter" type="Sprite"]
script = ExtResource( 1 )

[node name="Lamp" type="Light2D" parent="."]
texture = ExtResource( 2 )
mode = 3
range_item_cull_mask = 3

[node name="Body" type="Polygon2D" parent="."]
light_mask = 4
antialiased = true
polygon = PoolVector2Array( -32, -32, 32, -32, 32, 32, -32, 32 )

[node name="LampArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LampArea"]
shape = SubResource( 1 )

[connection signal="area_entered" from="LampArea" to="." method="_on_LampArea_area_entered"]
[connection signal="area_exited" from="LampArea" to="." method="_on_LampArea_area_exited"]
[connection signal="body_entered" from="LampArea" to="." method="_on_LampArea_body_entered"]
[connection signal="body_exited" from="LampArea" to="." method="_on_LampArea_body_exited"]
